--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -5,7 +5,6 @@ header {
     justify-content: center;
     align-items: center;
     padding: 10px 31px 60px 36px;
-    overflow: hidden;
 
 }
 .header-info {
@@ -26,11 +25,26 @@ header {
         color: $highlightColor1;
         @include font($fontTitle , 22px , 1.4);
         margin-top: 20px;
+        transform: translateX(-100%);
+    animation: slideX 1s ease-in-out forwards;
+
+    }
+    h1 , h2 {
+        transform: translateY(-100%);
+    animation : slideY 1s ease-in-out forwards;
+
     }
 
     button {
        @include button();
        margin-top: 20px;
+       opacity: 0;
+       transition: background 200ms ease-in;
+    animation: fadeIn 2s ease-in-out forwards;
+
+       &:hover {
+           background: $secondaryColor1;
+       }
     }
 }
 .header-img {
@@ -41,7 +55,43 @@ header {
         height: 540px;
         object-fit: cover;
         border-radius: 20px;
+        transform: translateY(-100%);
+
+    }
+}
+.header-img.active img {
+    animation : imgAnimation 2s ease-in-out forwards;
+}
+@keyframes imgAnimation {
+    0% {
+        transform: translateY(-100%);
+    }
+    100% {
         transform: translateY(35%);
 
+    }
+}
+@keyframes slideY {
+    0%{
+        transform: translateY(-100%);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+@keyframes slideX {
+    0% {
+        transform: translateX(-100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+@keyframes fadeIn {
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
     }
 }
