--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -5,6 +5,7 @@ header {
     justify-content: center;
     align-items: center;
     padding: 10px 31px 60px 36px;
+    user-select: none;
 
 }
 .header-info {
@@ -35,21 +36,12 @@ header {
 
     }
 
-    button {
-       @include button();
-       margin-top: 20px;
-       opacity: 0;
-       transition: background 200ms ease-in;
-    animation: fadeIn 2s ease-in-out forwards;
 
-       &:hover {
-           background: $secondaryColor1;
-       }
-    }
 }
 .header-img {
     flex-basis: 100%;
     max-width: 500px;
+    position: relative;
     img {
         width: 100%;
         height: 540px;
@@ -57,6 +49,12 @@ header {
         border-radius: 20px;
         transform: translateY(-100%);
 
+    }
+    button {
+        position: absolute;
+        top: 128%;
+        right: 50%;
+        transform: translate(50%,50%);
     }
 }
 .header-img.active img {
