--- a/src/components/Main/_main.scss
+++ b/src/components/Main/_main.scss
@@ -1,5 +1,13 @@
 main {
-    button {
-        transform: translateX(79%);
+    padding-top: 200px;
+    padding-bottom: 20px;
+    padding-left: clamp(10px , 5vw, 15px);
+    padding-right: clamp(10px , 5vw, 15px);
+    max-width: 900px;
+    margin: auto;
+    h1 {
+        @include font($fontTitle , clamp(40px , 10vw , 80px) , inherit);
     }
 }
+
+@import './section1';
