--- a/src/components/Main/_section1.scss
+++ b/src/components/Main/_section1.scss
@@ -1,7 +1,18 @@
-section {
-	display: flex;
-	justify-content: center;
-	gap: 20px;
+section.section1 {
+	padding-top: 200px;
+    padding-bottom: 20px;
+    padding-left: clamp(10px , 5vw, 15px);
+    padding-right: clamp(10px , 5vw, 15px);
+    max-width: 900px;
+    margin: auto;
+    h1 {
+        @include font($fontTitle , clamp(40px , 10vw , 80px) , inherit);
+    }
+	div.container{
+		display: flex;
+		justify-content: center;
+		gap: 20px;
+	}
 }
 .card {
 	width: 349px;
